Change the route implementation - now there is one route that includes all the waypoints a driver needs to pass to deliver riders.
Each waypoint may contain meta information that allows a driver to see where is the origin and where is the destination for the rider.

Signed-off-by: Elizaveta Sorokina